if there are many tags - prevented them from overlapping or pushing the vote container.

--- a/app/assets/stylesheets/components/restaurant.css.scss
+++ b/app/assets/stylesheets/components/restaurant.css.scss
@@ -39,6 +39,7 @@
     align-self: center;
     flex: 12 0 auto;
     height: 44px;
+    margin-left: 30px;
 
     display: flex;
     flex-flow: row nowrap;
